osso-app-killer (1.25-1) unstable; urgency=low

  * SUW code is unnecessary. It should be done by SUW cud script.
  * BT device name reset in osso-app-killer-common.sh is unnecessary. It should be done by cud and rfs scripts.

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Tue, 13 Jan 2009 13:40:19 +0200

osso-app-killer (1.24-1) unstable; urgency=low

  * Fixing scripts for Fremantle
  * Fixes: NB#91706

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Mon, 12 Jan 2009 14:04:11 +0200

osso-app-killer (1.23-1) unstable; urgency=low

  * Fixes: NB#86990

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Thu, 17 Jul 2008 11:02:10 +0300

osso-app-killer (1.22-1) unstable; urgency=low

  * Replace all the other rootchecks as well

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Thu, 10 Jul 2008 18:25:56 +0300

osso-app-killer (1.21-1) unstable; urgency=low

  * Need to use $(id -u) -eq 0 to check for root, rather than "x$USER" = "xroot"

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Thu, 10 Jul 2008 16:18:46 +0300

osso-app-killer (1.20-1) unstable; urgency=low

  * Restore locale from /usr/share/osso-af-startup/locale.orig, not from
    /etc/osso-af-init/locale.orig

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Mon, 16 Jun 2008 16:05:47 +0300

osso-app-killer (1.19-1) unstable; urgency=low

  * Added 'RX-48' to the HW-specific part of CUD. Fixes: NB#78472

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 14 Dec 2007 13:35:02 +0200

osso-app-killer (1.18-1) unstable; urgency=low

  * Added rotating animation for CUD when the internal card is cleared.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 Oct 2007 09:36:54 +0200

osso-app-killer (1.17-1) unstable; urgency=low

  * Remove 'empty' GConf directories. Fixes: NB#72357
  * Backported CUD fixes from 1.16-1fix. Fixes: NB#71791

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 23 Oct 2007 16:47:24 +0300

osso-app-killer (1.16-1) unstable; urgency=low
